Fixed the intro, literature review and references

--- a/references.bib
+++ b/references.bib
@@ -1,39 +1,95 @@
-@article{wang2014,
-  title={Generalized estimating equations in longitudinal data analysis: a review and recent developments},
-  author={Wang, Ming},
-  journal={Advances in Statistics},
-  volume={2014},
-  year={2014},
-  publisher={Hindawi}
+@article{Abeysekera2009,
+  title={Use of Schoenfeld’s global test to test the proportional hazardsassumption in the Cox proportional hazards model: an application to a clinical study},
+  author={W.W.M. Abeysekera, M.R. Sooriyarachchi},
+  journal={Research Article},
+  year={2009},
+  publisher={J.Natri.Sci.Foundation Sri Lanka 2009}
 }
 
-@Manual{R-base,
-  title = {R: A Language and Environment for Statistical
-           Computing},
-  author = {{R Core Team}},
-  organization = {R Foundation for Statistical Computing},
-  address = {Vienna, Austria},
-  year = {2019},
-  url = {https://www.R-project.org},
+@article{Ben-Assuli2023,
+  title={Utilizing shared frailty with the Cox proportional hazards regression: Post discharge survival analysis of CHF patients},
+  author={Ofir Ben-Assuli, Roni Ramon-Gonen, Tsipi Heart, Arie Jacobi, Robert Klempfner},
+  journal={Research Article},
+  year={2023},
+  publisher={Journal of Biomedical Informatics}
 }
 
-@book{efr2008,
-  title={Nonparametric Curve Estimation: Methods, Theory, and Applications},
-  author={Efromovich, S.},
-  isbn={9780387226385},
-  lccn={99013253},
-  series={Springer Series in Statistics},
-  url={https://books.google.com/books?id=mdoLBwAAQBAJ},
-  year={2008},
-  publisher={Springer New York}
+@article{Equeter2020,
+  title={An Analytic Approach to the Cox Proportional Hazards Model for Estimating the Lifespan of Cutting Tools},
+  author={Lucas Equeter, Francois Ducobu, Edouard Riviere-Lorphevre, Roger Serra, Pierre Dehombreux},
+  journal={Research Article},
+  year={2020},
+  publisher={Special Issue Tool Wear Predicition in Manufacturing}
 }
-@article{bro2014principal,
-  title={Principal component analysis},
-  author={Bro, Rasmus and Smilde, Age K},
-  journal={Analytical methods},
-  volume={6},
-  number={9},
-  pages={2812--2831},
-  year={2014},
-  publisher={Royal Society of Chemistry}
+
+@article{Fan2002,
+  title={Variable Selection for Cox's proportional Hazards Model and Frailty Model},
+  author={Jianqing Fan, Runze Li},
+  journal={Research Article},
+  year={2002},
+  publisher={Project euclid}
 }
+
+@article{Gonzalez-Dominguez2022,
+  title={Cox proportional hazards model used for predictive analysis of the energy consumption of healthcare buildings},
+  author={Jaime Gonzalez-Dominguez, Gonzalo Sanchez-Barroso, Justo Garcia-Sanz-Calcedo, Nuno de Sousa Neves},
+  journal={Research Article},
+  year={2022},
+  publisher={Science Direct Energy and Buildings}
+}
+
+@article{Faruk2018,
+  title={The comparison of proportional hazards and acceleratedfailure time models in analyzing the first birth interval survival data},
+  author={Alfensi Faruk},
+  journal={Research Article},
+  year={2018},
+  publisher={Journal of Physics: Conference Series}
+}
+
+@article{Deo2021,
+  title={Survival analysis—part 2: Cox proportional hazards model},
+  author={Salil Vasudeo Deo, Vishali Deo, Varun Sundaram},
+  journal={Research Article},
+  year={2021},
+  publisher={PubMed Central}
+}
+
+@article{Fox2023,
+  title={Cox Proportional-Hazards Regression for Survival Data in R},
+  author={John Fox, Sanford Weisberg},
+  journal={Research Article},
+  year={2023},
+  publisher={Appendix-Cox-Regression}
+}
+
+@article{Bland2004,
+  title={The logrank test},
+  author={J Martin Bland, Douglas G Altman},
+  journal={Research Article},
+  year={2004},
+  publisher={PubMed Central}
+}
+
+@article{Kuitunen2021,
+  title={Testing the proportional hazards assumption in cox regression and dealing with possible non-proportionality in total joint arthroplasty research: methodological perspectives and review},
+  author={Ilari Kuitunen, Ville T. Ponkilainene, Mikko M. Uimonen, Antti Eskelinen, Aleksi Reito},
+  journal={Research Article},
+  year={2021},
+  publisher={BMC Musculoskeletal Disorders}
+}
+@article{Ponkilainene2021,
+  title={Testing the proportional hazards assumption in cox regression and dealing with possible non-proportionality in total joint arthroplasty research},
+  author={Ville T. Ponkilainene, Mikko M. Uimonen, Antti Eskelinen, Aleksi Reito},
+  journal={Research Article},
+  year={2021},
+  publisher={Springer Link}
+}
+
+@article{Vadeby2010,
+  title={Sleepiness and prediction of driver impairment in simulator studies using a Cox proportional hazard approach},
+  author={Anna Vadeby, Asa Forsman, Goran Kecklund, Torbjorn Akerstedt, David Sandberg, Anna Anund},
+  journal={Research Article},
+  year={2010},
+  publisher={Accident Analysis and Prevention}
+}
+
